--- a/src/app/order/create-flow/steps/steps.component.css
+++ b/src/app/order/create-flow/steps/steps.component.css
@@ -141,7 +141,7 @@
   
   .button-pink { background-color: pink; }
   
-  .button-container {
+  /* .button-container {
       background-color: white;
       display: flex;
       flex-direction: row;
@@ -150,8 +150,8 @@
       padding-right: 100px;
       padding-bottom: 100px;
       border-radius: 15px;
-  
-    }
+   */
+    
   
     
   
@@ -175,10 +175,6 @@
       display: flex;
     }
     .box {
-      width: 200px;
-      height: 100px;
-      background-color: #f0f0f0;
-      border: 1px solid #ccc;
       margin-left: 20px; /* Ajustez la marge selon vos besoins */
     }
     
