commit 06,06,2024 by ghazi

--- a/src/app/order/executor/workflow-list/workflow-list.component.html
+++ b/src/app/order/executor/workflow-list/workflow-list.component.html
@@ -25,13 +25,8 @@
           <td class="col-description">{{wkf.description}}</td>
 
           <td class="col-actions">
-            <button class="roler" (click)="openRoleUserDialog()">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="rgb(48, 61, 231)" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
-                <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-              </svg>
-            </button>
-            <button class="execute" (click)="executer(wkf.id)">
+
+            <button class="execute" (click)="executerDetails(wkf.id)">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green" class="bi bi-rewind-btn" viewBox="0 0 16 16">
                 <path d="M7.21 5.093A.5.5 0 0 1 8 5.5v1.886l3.21-2.293A.5.5 0 0 1 12 5.5v5a.5.5 0 0 1-.79.407L8 8.614V10.5a.5.5 0 0 1-.79.407l-3.5-2.5a.5.5 0 0 1 0-.814z"/>
                 <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
