--- a/src/app/order/executor/workflow-execute/workflow-execute.component.css
+++ b/src/app/order/executor/workflow-execute/workflow-execute.component.css
@@ -1,365 +1,340 @@
 .h1{
   
-    text-align: center; /* Alignement centré */
-    
+  text-align: center; /* Alignement centré */
   
-  }
-  
-  /* Style pour le composant BlogList */
-  .blog-list {
-    display: flex;
-    flex-wrap: wrap;
-    /* justify-content: center; */
-    /* border: 2px solid #cccccc; */
-    padding: 10px;
-    /* border-radius: 25px; */
-    /* margin-top: 40px; */
-    margin-left: auto;
-    margin-right: auto;
 
-  
-  }
-  /* Style pour le composant BlogItem */
-  .blog-item-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* width: 200px; */
-    /* height: 100px; */
-    margin-right: 20px;
-    margin-bottom: 20px;
-    /* border: 5px solid #79ec06; */
-    border-radius: 9px;
-    background-color: blue;
-    /* color: rgb(255, 255, 255); */
-    color: white;
-    padding: 10px 25px 5px;
-  
-  }
-  /*pour le step a executer*/
-  
-  
-  .blog-item-containerex {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* width: 200px; */
-    /* height: 100px; */
-    margin-right: 20px;
-    margin-bottom: 20px;
-    /* border: 5px solid #79ec06; */
-    border-radius: 9px;
-    background-color: blue;
-    /* color: rgb(255, 255, 255); */
-    color: white;
-    padding: 10px 25px 5px;
+}
 
-  
-  }
-  /* Flèches */
-  .arrow {
-    position: absolute;
-    top: 5%;
-    width: 27px; /* Ajustez la taille de la flèche */
-    height: 90px; /* Ajustez la taille de la flèche */
-    background-color: #ecb206; /* Couleur de la flèche */
-  }
-  
-  .arrow:first-child {
-    right: -25px;
-    clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
-    height: 39px;
-  }
-  
-  .arrow:last-child {
-    right: -25px;
-    clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
-    height: 39px;
-  }
-  
-  /*pour le cadre de page d'execution*/
-  
-  h4 {
-    text-align: left; /* Centre le texte horizontalement */
-    font-family: emoji;
-    font-weight: bold;
-    font-size: 17px;
-  }
-  h5 {
-    text-align: center; /* Centre le texte horizontalement */
-    color: #ecb206;
-    margin-top: 20px;
-  }
-  
-  
-  .conteneur {
-    display: flex;
+/* Style pour le composant BlogList */
+.blog-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border: 2px solid #cccccc;
+  padding: 10px;
+  border-radius: 25px; /* Ajoute des coins arrondis de 15px */
+  margin-top: 40px;
+ 
+  margin-left: auto; /* Centrer horizontalement */
+  margin-right: auto; /* Centrer horizontalement */
+
+}
+/* Style pour le composant BlogItem */
+.blog-item-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 100px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  border: 2px solid #3b4abc;
+  border-radius: 15px; /* Ajoute des coins arrondis de 15px */
+  background-color: #3b4abc;
+  color: white; /* Couleur du texte en blanc */
+
+}
+/*pour le step a executer*/
+
+
+.blog-item-containerex {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 100px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  border: 5px solid #79ec06;
+  border-radius: 15px; /* Ajoute des coins arrondis de 15px */
+  background-color: #3b4abc;
+  color: rgb(255, 255, 255); /* Couleur du texte en blanc */
+
+}
+/* Flèches */
+.arrow {
+  position: absolute;
+  top: 5%;
+  width: 27px; /* Ajustez la taille de la flèche */
+  height: 90px; /* Ajustez la taille de la flèche */
+  background-color: #ecb206; /* Couleur de la flèche */
+}
+
+.arrow:first-child {
+  left: -25px; /* Positionnement de la flèche à gauche */
+  clip-path: polygon(0% 50%, 100% 0%, 100% 100%);
+}
+
+.arrow:last-child {
+  right: -25px; /* Positionnement de la flèche à droite */
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+}
+
+/*pour le cadre de page d'execution*/
+
+h4 {
+  text-align: center; /* Centre le texte horizontalement */
+}
+h5 {
+  text-align: center; /* Centre le texte horizontalement */
+  color: #ecb206;
   margin-top: 20px;
-  }
-  
-  .cadre {
-    flex: 1;
-    border: 1px solid #ccc;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    border-bottom: none;
-    border-left: none;
-    border-right: none;
-    padding-top: 23px;
-  
-  }
-  
-  .gauche {
-    margin-right: 10px; /* Marge entre les cadres */
-  }
-  
-  .droit {
-    margin-left: 10px; /* Marge entre les cadres */
-    
-  }
-  
-  
-  
-  .container {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .pLeft {
-    text-align: left;
-    margin-right: 5px; /* Augmente l'espace entre le div de gauche et le div central */
-  }
-  
-  .pCenter {
-    text-align: center;
-  }
-  
-  .pRight {
-    text-align: right;
-    margin-left: 5px; /* Augmente l'espace entre le div de droite et le div central */
-  }
-  
-  
-  /*pour le tableau des regles*/
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  th, td {
-    border: 1px solid #dddddd;
-    padding: 8px;
-    text-align: left;
-    border-right: none;
-    border-left: none;
-  }
-  
-  /* th {
-    background-color: #f2f2f2;
-  } */
-  
-  tbody tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
-  
-  button {
-  
-    padding: 6px 10px;
-    border: none;
-    background-color: #4CAF50;
-    color: white;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  
-  button.roler {
-    background-color: #2196F3;
-  }
-  
-  button:hover {
-    background-color: #45a049;
-  }
-  
-  button.roler:hover {
-    background-color: #0b7dda;
-  }
-  
-  h6{
-    font-family: emoji;
-    font-weight: bold;
-    font-size: 17px;
+}
 
-  }
-  
-  /*pour le button de fin de page */
-  
-  .button-container {
-    text-align: center;
-    margin-top: 10px;
-  }
-  
-  .button {
-    display: inline-block;
-    padding: 10px 20px;
-    border: none;
-    color: white;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-left: 10px; /* Pour séparer les boutons */
-    background-color: #3b4abc; /* Couleur de fond du bouton Ajouter */
-    color: white; /* Couleur du texte */
-    margin-right: 3px;
-  }
-  
-  .blue-button {
-    background-color: #3b4abc;
-  }
-  
-  .green-button {
-    background-color: #ecb206;
-  }
-  
-  /*pour le div de remplir les objets de type Saisir*/
-  .form-container {
-    margin-top: 50px;
-    margin-bottom: 50px ;
-    border-radius: 8px; /* Coins arrondis de 8 pixels */
-    margin: 50 auto; /* Centrer horizontalement */
-  }
-  
-  .add-user-form h2 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-  }
-  
-  .add-user-form form {
-    width: 100%; /* Utilisation de la largeur totale du conteneur parent */
-  }
-  
-  .add-user-form .form-group {
-    margin-bottom: 10px;
-  }
-  
-  .add-user-form label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .add-user-form input,
-  .add-user-form select {
-    width: calc(100% - 20px); /* Utilisation de la largeur totale du conteneur parent avec une petite marge */
-    padding: 8px;
-    border: 1px solid #bab8b8;
-    border-radius: 4px;
-  }
-  
-  .add-user-form .button-group {
-    margin-top: 20px; /* Ajout de l'espace entre les boutons et les champs de formulaire */
-  }
-  
-  .add-user-form .button-group button {
-    width: 49%; /* Définition de la largeur des boutons */
-    padding: 10px; /* Ajout du rembourrage */
-    border: none; /* Suppression de la bordure */
-    border-radius: 4px; /* Coins arrondis */
-    cursor: pointer; /* Curseur pointeur */
-  }
-  
-  .add-user-form .button-group button.add-button {
-    background-color: transparent; /* Couleur de fond du bouton Ajouter */
-    color: blue; /* Couleur du texte */
-    margin-right: 3px;
-  }
-  .add-user-form .button-group button.souv-button {
-    background-color: #3bbc60; /* Couleur de fond du bouton Ajouter */
-    color: white; /* Couleur du texte */
-    margin-right: 3px;
-  }
-  
-  
-  .add-user-form .button-group button.cancel-button {
-    background-color: #ecb206; /* Couleur de fond du bouton Annuler */
-    color: white; /* Couleur du texte */
-  }
-  
-  .add-user-form .button-group button:hover {
-    opacity: 0.8; /* Réduction de l'opacité au survol */
-  }
-  
-  
-  /*pour le button execute le regle*/
-  button {
-    background-color: #4CAF50; /* Couleur de fond */
-    color: white; /* Couleur du texte */
-    padding: 10px 20px; /* Rembourrage intérieur */
-    font-size: 16px; /* Taille de police */
-    border: none; /* Supprimer la bordure */
-    border-radius: 5px; /* Coins arrondis */
-    cursor: pointer; /* Curseur de la souris */
-  }
-  
-  /* Changement de style au survol */
-  button:hover {
-    background-color: #45a049;
-  }
-  
-  .btEx {
-    margin-top: 150px;
-    margin-left: 300px;
-    width: 400px; /* Largeur souhaitée */
-    height: 100px; /* Hauteur souhaitée */
-    font-size: 30px; /* Taille de police souhaitée */
-  
-  }
 
-  .title-container {
-    text-align: center;
-    margin-bottom: 20px; 
-  }
+.conteneur {
+  display: flex;
+  border: 1px solid #ccc;
+margin-top: 20px;
+}
+
+.cadre {
+  flex: 1;
+  border: 2px solid #ccc;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  border-radius: 15px; /* Ajoute des coins arrondis de 15px */
+
+}
+
+.gauche {
+  margin-right: 10px; /* Marge entre les cadres */
+}
+
+.droit {
+  margin-left: 10px; /* Marge entre les cadres */
   
-  .page-title {
-    color: black;
-    font-size: 15px;
-    text-align: left;
-    margin-bottom: 44px;
+}
 
-  }
 
-  span{
-    font-weight: bold;
-  }
 
-  .full{
-    width: 100%;
-  }
+.container {
+  display: flex;
+  justify-content: space-between;
+}
 
-  .stepName{
-    font-weight: normal;
-  }
+.pLeft {
+  text-align: left;
+  margin-right: 5px; /* Augmente l'espace entre le div de gauche et le div central */
+}
 
-  .iconExecStep{
-padding-bottom: 20px;
-  }
+.pCenter {
+  text-align: center;
+}
 
-  .col-nom {
-    width: 20%;
-  }
+.pRight {
+  text-align: right;
+  margin-left: 5px; /* Augmente l'espace entre le div de droite et le div central */
+}
+
+
+/*pour le tableau des regles*/
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid #dddddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+button {
+
+  padding: 6px 10px;
+  border: none;
+  background-color: #4CAF50;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+button.roler {
+  background-color: #2196F3;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+button.roler:hover {
+  background-color: #0b7dda;
+}
+
+
+
+/*pour le button de fin de page */
+
+.button-container {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-left: 10px; /* Pour séparer les boutons */
+  background-color: #3b4abc; /* Couleur de fond du bouton Ajouter */
+  color: white; /* Couleur du texte */
+  margin-right: 3px;
+}
+
+
+
+.yelo-button {
+  background-color: #ecb206;
+}
+
+
+
+/*pour le div de remplir les objets de type Saisir*/
+.form-container {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-radius: 8px; /* Coins arrondis de 8 pixels */
+  margin: 10px auto; /* Centrer horizontalement */
+  border: 2px solid black; /* Bordure noire de 2 pixels */
+}
+
+/* Conteneur principal pour les formulaires */
+.form-container {
+margin-top: 50px;
+margin-bottom: 50px;
+border-radius: 8px;
+margin: 10px auto;
+border: 2px solid black;
+padding: 20px; /* Ajout d'un padding pour l'intérieur du conteneur */
+max-width: 600px; /* Limite la largeur maximale pour une meilleure lisibilité */
+background-color: #f9f9f9; /* Couleur de fond légèrement grise pour contraste */
+}
+
+/* Style pour les titres des formulaires */
+.add-user-form h2 {
+font-size: 1.5em;
+margin-bottom: 10px;
+color: #333; /* Couleur de texte plus sombre pour meilleure lisibilité */
+font-weight: bold; /* Texte en gras */
+}
+
+/* Style pour le formulaire */
+.add-user-form form {
+width: 100%;
+}
+
+/* Groupe de formulaire */
+.add-user-form .form-group {
+margin-bottom: 20px; /* Espace entre les champs de formulaire */
+}
+
+/* Style pour les étiquettes */
+.add-user-form label {
+display: block;
+margin-bottom: 5px;
+color: #555; /* Couleur de texte légèrement grise */
+}
+
+/* Style pour les champs de saisie */
+.add-user-form input,
+.add-user-form select {
+width: calc(100% - 20px);
+padding: 10px; /* Padding augmenté pour une meilleure expérience utilisateur */
+border: 1px solid #ccc; /* Couleur de bordure plus douce */
+border-radius: 4px;
+box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); /* Ajout d'un ombrage interne */
+font-size: 1em; /* Taille de police */
+}
+
+/* Style pour les boutons */
+.add-user-form .button-group {
+margin-top: 20px;
+text-align: right; /* Alignement des boutons à droite */
+}
+
+/* Style pour le bouton principal */
+.button.green-button {
+background-color: #28a745; /* Couleur de fond verte */
+color: white; /* Couleur du texte */
+border: none;
+border-radius: 4px;
+padding: 10px 20px; /* Padding augmenté pour une meilleure expérience utilisateur */
+font-size: 1em;
+cursor: pointer; /* Curseur en mode pointer */
+transition: background-color 0.3s ease; /* Transition pour l'effet hover */
+}
+
+/* Effet hover pour le bouton */
+.button.green-button:hover {
+background-color: #218838; /* Couleur de fond verte plus foncée pour l'effet hover */
+}
+
+
+.add-user-form .button-group button {
+  width: 49%; /* Définition de la largeur des boutons */
+  padding: 10px; /* Ajout du rembourrage */
+  border: none; /* Suppression de la bordure */
+  border-radius: 4px; /* Coins arrondis */
+  cursor: pointer; /* Curseur pointeur */
+}
+
+.add-user-form .button-group button.add-button {
+  background-color: #3b4abc; /* Couleur de fond du bouton Ajouter */
+  color: white; /* Couleur du texte */
+  margin-right: 3px;
+}
+.add-user-form .button-group button.souv-button {
+  background-color: #3bbc60; /* Couleur de fond du bouton Ajouter */
+  color: white; /* Couleur du texte */
+  margin-right: 3px;
+}
+
+
+.add-user-form .button-group button.cancel-button {
+  background-color: #ecb206; /* Couleur de fond du bouton Annuler */
+  color: white; /* Couleur du texte */
+}
+
+.add-user-form .button-group button:hover {
+  opacity: 0.8; /* Réduction de l'opacité au survol */
+}
+
+
+/*pour le button execute le regle*/
+button {
+  background-color: #4CAF50; /* Couleur de fond */
+  color: white; /* Couleur du texte */
+  padding: 10px 20px; /* Rembourrage intérieur */
+  font-size: 16px; /* Taille de police */
+  border: none; /* Supprimer la bordure */
+  border-radius: 5px; /* Coins arrondis */
+  cursor: pointer; /* Curseur de la souris */
+}
+
+/* Changement de style au survol */
+button:hover {
+  background-color: #45a049;
+}
+
+.btEx {
+  margin-top: 0px;
   
-  .col-description {
-    width: 50%;
-  }
-  
-  .col-actions {
-    width: 20px;
-    text-align: right; /* Optionnel: pour centrer les boutons */
-  }
-  
-  .col-num {
-    width: 10%;
-    text-align: center;
-  }
+  width: 100px; /* Largeur souhaitée */
+  height: 50px; /* Hauteur souhaitée */
 
+}
